src/test/ui/issues/1-9999/issue-4366-2.stderr
error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/issue-4366-2.rs:15:21
   |
LL |         fn sub() -> Bar { 1 }
   |                     ^^^ not found in this scope
   |
help: consider importing this type alias
   |
LL |         use a::b::Bar;
   |

error[E0423]: expected function, found module `foo`
  --> $DIR/issue-4366-2.rs:25:5
   |
LL |     foo();
   |     ^^^ not a function
   |
help: consider importing this function instead
   |
LL | use foo::foo;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0423.
For more information about an error, try `rustc --explain E0412`.
